fix: make the background of the link contrast with the text

--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -220,7 +220,7 @@
   }
 
   &::before {
-    background: var(--accent-color);
+    background: var(--background-alter-color);
   }
 
   &::after {
